--- a/views/layout.html
+++ b/views/layout.html
@@ -102,29 +102,31 @@
 .web2py_grid .web2py_form td {vertical-align: top;}
 
 .web2py_grid thead th,.web2py_grid tfoot td {
-	background-color: #DEDEDE;
+	background-color: #f5f5f5;
    padding:10px 5px 10px 5px;
+   background-image: -moz-linear-gradient(center top , #f2f2f2 0px, #fafafa 100%);
 }
 .web2py_grid thead th a,.web2py_grid tfoot td a{
-    color:#22262E;
+    color:#444;
 }
 
 /*Estilo de las filas del grid*/
 .web2py_grid tr.odd {
-	background-color:#DEDEDE;
+	background-color:#f3f3f3;
 	border-top-style:solid;
 	border-color: #CCC;
 	border-width: 1px;
 }
 .web2py_grid tr.even {
-	background-color:#EBEBEB;
+	background-color:#f9f9f9;
 	border-top-style:solid;
 	border-color: #CCC;
 	border-width: 1px;
 }
 .web2py_grid tr.odd:hover,
 .web2py_grid tr.even:hover {
-	background-color:#FFFFFF;
+	background-color: #e5e5e5;
+    
 }
 /*Fin Estilo de las filas del grid*/
 
