Ajuste para la vista de periodos

--- a/views/layout.html
+++ b/views/layout.html
@@ -677,6 +677,9 @@ header,h1,h2,h3,h4{
                             <li>
                                 <a href="javascript:void();"><i class="fa fa-fw fa-folder-open"></i> Catalogos</a>
                                 <ul>
+                                	<li>
+                                        <a href="{{=URL('periodo','index')}}"> Periodos </a>
+                                    </li>
                                     <li>
                                         <a href="{{=URL('cc_empresa','cc_grid')}}"> Cuentas Contables </a>
                                     </li>
