--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -169,6 +169,14 @@ $(document).ready(function(){
         </legend>
     </div>
 </div>
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <p>
+            <a href="{{=URL('periodo','index')}}"><i class="fa fa-calendar"></i> Ver periodos</a>
+        </p>
+    </div>
+</div>
+
                                 <!-- widget grid -->
                                 <section id="widget-grid" class="">
                                         <!-- row -->
