Cambios al editar pólizas de periodos cerrados

--- a/views/layout.html
+++ b/views/layout.html
@@ -587,7 +587,7 @@ header,h1,h2,h3,h4{
 						{{pass}}
 					</li>
 					<li>
-						<a href="javascript:void();">
+						<a href="javascript:void(0);">
 							<i class="fa fa-lg fa-fw  fa-file-text-o "></i>
 							<span class="menu-item-parent">Pólizas</span>
 						</a>
@@ -618,7 +618,7 @@ header,h1,h2,h3,h4{
 
 					</li>
 					<li>
-						<a href="javascript:void();"><i class="fa fa-lg fa-fw fa-clipboard  "></i> <span class="menu-item-parent">Reportes</span></a>
+						<a href="javascript:void(0);"><i class="fa fa-lg fa-fw fa-clipboard  "></i> <span class="menu-item-parent">Reportes</span></a>
 						<ul>
 							<li>
 								<a href="{{=URL('reportes','libro_diario')}}">
@@ -646,7 +646,7 @@ header,h1,h2,h3,h4{
 								</a>
                             </li>
                             <li>
-                                <a href="javascript:void();">
+                                <a href="javascript:void(0);">
 									<i class="fa fa-fw fa-folder-open"></i>
 									Reportes Creados
 								</a>
@@ -670,33 +670,33 @@ header,h1,h2,h3,h4{
 						</ul>
 					</li>
 					<li>
-						<a href="javascript:void();"><i class="fa fa-lg fa-fw fa-cog"></i> <span class="menu-item-parent"> Configuraciones</span></a>
+						<a href="javascript:void(0);"><i class="fa fa-lg fa-fw fa-cog"></i> <span class="menu-item-parent"> Configuraciones</span></a>
 						<ul>
                             <li>
-                                <a href="javascript:void();"><i class="fa fa-fw fa-folder-open"></i> Catalogos</a>
+                                <a href="javascript:void(0);"><i class="fa fa-fw fa-folder-open"></i> Catalogos</a>
                                 <ul>
                                     <li>
                                         <a href="{{=URL('cc_empresa','cc_grid')}}"> Cuentas Contables </a>
                                     </li>
                                     <li>
-                                        <a style="color:#595959;" href="javascript:void();" disabled='disabled'> Sucursales </a>
+                                        <a style="color:#595959;" href="javascript:void(0);" disabled='disabled'> Sucursales </a>
                                     </li>
                                     <li>
-                                        <a style="color:#595959;" href="javascript:void();" disabled='disabled'> Paises </a>
+                                        <a style="color:#595959;" href="javascript:void(0);" disabled='disabled'> Paises </a>
                                     </li>
                                     <li>
-                                        <a style="color:#595959;" href="javascript:void();" disabled='disabled'> Estados </a>
+                                        <a style="color:#595959;" href="javascript:void(0);" disabled='disabled'> Estados </a>
                                     </li>
                                     <li>
-                                        <a style="color:#595959;" href="javascript:void();" disabled='disabled'> Municipios </a>
+                                        <a style="color:#595959;" href="javascript:void(0);" disabled='disabled'> Municipios </a>
                                     </li>
                                     <li>
-                                        <a style="color:#595959;" href="javascript:void();" disabled='disabled'> Localidades </a>
+                                        <a style="color:#595959;" href="javascript:void(0);" disabled='disabled'> Localidades </a>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="javascript:void();"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> Reportes</a>
+                                <a href="javascript:void(0);"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> Reportes</a>
                                 <ul>
                                     <li>
                                         <a href="{{=URL('configuracion','estado_resultados')}}"><i class="fa fa-fw "></i> Estado de Resultados </a>
@@ -707,12 +707,13 @@ header,h1,h2,h3,h4{
                                 </ul>
                             </li>
                             <li>
-								<a href="javascript:void();">
+								<a href="javascript:void(0)">
 									<i class="fa fa-fw fa-user"></i> Usuarios
 								</a>
 								<ul>
 									<li>
 										<a href="{{=URL('permisos','index')}}"> Listar usuarios </a>
+										{{ print URL('permisos','index')}}
 									</li>
                                     <li>
 										<a href="{{=URL('permisos','grupos')}}"> Grupos </a>
