--- a/views/layout.html
+++ b/views/layout.html
@@ -774,12 +774,9 @@ header,h1,h2,h3,h4{
 		you can add as many as you like
 		-->
 		<div id="shortcut">
-			<ul>
-				<!--<li>
-					<a href="#calendar.html" class="jarvismetro-tile big-cubes bg-color-orangeDark"> <span class="iconbox"> <i class="fa fa-calendar fa-4x"></i> <span>Calendario</span> </span> </a>
-				</li>-->
+			<ul>				
 				<li>
-					<a href="{{=URL('default','user/profile')}}" class="jarvismetro-tile big-cubes selected bg-color-pinkDark"> <span class="iconbox"> <i class="fa fa-user fa-4x"></i> <span>Mi Pérfil </span> </span> </a>
+					<a href="{{=URL('default','user/profile')}}" class="jarvismetro-tile big-cubes selected bg-color-green"> <span class="iconbox"> <i class="fa fa-user fa-4x"></i> <span>Mi Pérfil </span> </span> </a>
 				</li>
 			</ul>
 		</div>
