Selector de empresas

--- a/views/layout.html
+++ b/views/layout.html
@@ -778,9 +778,23 @@ header,h1,h2,h3,h4{
 				<li>
 					<a href="{{=URL('default','user/profile')}}" class="jarvismetro-tile big-cubes selected bg-color-green"> <span class="iconbox"> <i class="fa fa-user fa-4x"></i> <span>Mi Pérfil </span> </span> </a>
 				</li>
+				{{if mias:}}
+					{{for m in mias:}}					
+					<li>
+						<a href="{{=URL('default', 'empresa', args=m.id)}}" class="jarvismetro-tile big-cubes bg-color-blueDark {{='selected' if int(session.instancias) == int(m.id) else ''}}" > <span class="iconbox"> <i class="fa fa-building  fa-4x"></i> <span>{{=m.razon_social}}</span> </span> </a>
+					</li>
+					{{pass}}
+				{{pass}}
+				{{if compartidas:}}
+				 	{{for c in compartidas:}}
+				 	<li>
+						<a href="{{=URL('default', 'empresa', args=c.id)}}" class="jarvismetro-tile big-cubes selected bg-color-blue {{='selected' if int(session.instancias) == int(c.id) else ''}}" > <span class="iconbox"> <i class="fa fa-building  fa-4x"></i> <span>{{=c.razon_social}}</span> </span> </a>
+					</li>
+					{{pass}}
+				{{pass}}
 			</ul>
 		</div>
-		<!-- END SHORTCUT AREA -->
+		<!-- END SHORTCUT AREA -->		
 
 		<!--================================================== -->
 
@@ -875,6 +889,7 @@ header,h1,h2,h3,h4{
 
 		<script type="text/javascript">
 		$(document).ready(function(){
+
 			/*
 			 * BASIC
 			 */
