--- a/views/reportes/balanza.html
+++ b/views/reportes/balanza.html
@@ -32,7 +32,7 @@ table > tbody > tr:hover{
             <div class="jarviswidget" id="wid-id-balanza" data-widget-editbutton="false"  data-widget-deletebutton="false">
                 <header>
 
-                    <span class="widget-icon"> <i class="fa fa-building txt-color-darken"></i> </span>
+                    <span class="widget-icon"> <i class="fa fa-filter txt-color-darken"></i> </span>
                     <h2>Balanza</h2>
 
                     <ul class="nav nav-tabs pull-right in" id="myTab">
