Cambios en listar póliza

--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -144,7 +144,7 @@ $(document).ready(function(){
                 });
 
 
-                $('.debe').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
+                $('.debe').editable("{{=URL('poliza', 'actualiza_debe_haber')}}",{
                     type: "my-row",
                     onblur: "submit",
                     tooltip: "Click para editar, ENTER para salvar.",
@@ -154,7 +154,7 @@ $(document).ready(function(){
                     }
                 });
 
-                $('.haber').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
+                $('.haber').editable("{{=URL('poliza', 'actualiza_debe_haber')}}",{
                     type: "my-row",
                     onblur: "submit",
                     tooltip: "Click para editar, ENTER para salvar.",
