Pagina inicial con login

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -67,7 +67,7 @@
         {{pass}}
     {{pass}}
 {{else:}}
-    {{redirect(URL('default','login'))}}
+    {{redirect(URL('default','init'))}}
 {{pass}}
 <style>
     .jumbotron{
